tenants/_base/_scoped-workload-template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "${namespace}"
  labels:
    openservicemesh.io/monitored-by: osm
    toolkit.fluxcd.io/tenant: "${team}"
    compliance.colinmac.dev/pci-scope: "${pciScope}"
    colinmac.dev/team: "${team}"
  annotations:
    openservicemesh.io/sidecar-injection: enabled
    openservicemesh.io/metrics: enabled
